--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@mdi/font": "^7.2.96",
 		"@nuxtjs/apollo": "^5.0.0-alpha.9",
 		"@nuxtjs/eslint-config-typescript": "^12.0.0",
+		"@pinia-plugin-persistedstate/nuxt": "^1.2.0",
 		"cz-conventional-changelog": "^3.3.0",
 		"eslint": "^8.54.0",
 		"eslint-config-prettier": "^9.0.0",
@@ -43,6 +44,8 @@
 	},
 	"dependencies": {
 		"@pinia/nuxt": "^0.5.1",
+		"echarts": "^5.5.0",
+		"pinia": "^2.1.7",
 		"sass": "^1.68.0",
 		"vuetify": "^3.3.23"
 	},
